# genesis-router

./: README.md  pyproject.toml
examples/: config.yaml  demo.py
genesis_router/: __init__.py  aliases.py  circuit_breaker.py  config.py  cost_tracker.py  protocols.py  rate_gate.py  retry.py  router.py  types.py
genesis_router/providers/: __init__.py  anthropic.py  groq.py  mock.py  multi.py  openai.py
tests/: test_circuit_breaker.py  test_config.py  test_cost_tracker.py  test_multi_delegate.py  test_rate_gate.py  test_retry.py  test_router.py
